--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1 class="heading">Notes App</h1>
-    <p class="info-text">Double click on a note to remove it</p>
+    <p class="info-text">Double click on a note to delete it</p>
     <div class="app" id="app">
-        <textarea cols="30" rows="10" class="note" placeholder="Empty Note"></textarea>
+        <!-- <textarea cols="30" rows="10" class="note" placeholder="Empty Note"></textarea> -->
         <button class="btn" id="btn">+</button>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
